# kieli

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  todo.txt  valgrind_readline_suppressions
kieli/libutl-readline/: CMakeLists.txt
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp  predefinitions.cpp
src/compiler/compiler/: compiler.cpp  compiler.hpp  main.cpp  project.cpp  project.hpp
src/devmain/: CMakeLists.txt
src/devmain/devmain/: history.cpp  history.hpp  main.cpp  repl.cpp  repl.hpp
src/driver/: CMakeLists.txt
src/driver/driver/: main.cpp
src/language-server/: CMakeLists.txt  README.md
src/language-server/language-server/: documentation.cpp  json.cpp  json.hpp  lsp.cpp  lsp.hpp  main.cpp  rpc.cpp  rpc.hpp  server.cpp  server.hpp
src/libcompiler/: CMakeLists.txt
src/libcompiler-pipeline/: CMakeLists.txt
src/libcompiler-pipeline/libcompiler-pipeline/: compiler-pipeline.cpp  compiler-pipeline.hpp
src/libcompiler/libcompiler/: compiler.cpp  compiler.hpp  db.hpp  filesystem.cpp  filesystem.hpp  fwd.hpp  lsp.hpp  tree_fwd.hpp
src/libcompiler/tests/: CMakeLists.txt  document.test.cpp  filesystem.test.cpp
src/libdesugar/: CMakeLists.txt  README.md
src/libdesugar/libdesugar/: ast.cpp  ast.hpp  ast_formatters.hpp  desugar.cpp  desugar.hpp  desugar_definition.cpp  desugar_expression.cpp  desugar_pattern.cpp  desugar_type.cpp  desugaring_internals.cpp  desugaring_internals.hpp  format_ast.cpp  format_hir.cpp  hir.cpp  hir.hpp  hir_formatting.cpp  internals.cpp  internals.hpp  shared_formatting.cpp
src/libdesugar/tests/: CMakeLists.txt  desugar.test.cpp  libdesugar.test.cpp
src/libdisplay/: CMakeLists.txt
src/libdisplay/libdisplay/: display.cpp  display.hpp
src/libformat/: CMakeLists.txt
src/libformat/libformat/: format.hpp  format_expression.cpp  format_internals.cpp  format_internals.hpp  format_module.cpp  format_pattern.cpp  format_type.cpp  internals.cpp  internals.hpp
src/liblex/: CMakeLists.txt
src/liblex/liblex/: context.cpp  context.hpp  lex.cpp  lex.hpp  numeric.cpp  numeric.hpp  state.cpp  state.hpp  token-x-macro-table.hpp  token.cpp  token.hpp  token_formatting.cpp
src/liblex/tests/: CMakeLists.txt  floating_literal.test.cpp  identifier.test.cpp  integer_literal.test.cpp  liblex.test.cpp  numeric.test.cpp  punctuation.test.cpp  quoted_literal.test.cpp  test_liblex.cpp  test_liblex.hpp  trivia.test.cpp
src/liblex2/: CMakeLists.txt
src/liblex2/liblex2/: lex.cpp  lex.hpp  numeric.cpp  numeric.hpp  state.cpp  state.hpp  token.cpp  token.hpp
src/liblex2/tests/: floating_literal.test.cpp  identifier.test.cpp  integer_literal.test.cpp  numeric.test.cpp  punctuation.test.cpp  quoted_literal.test.cpp  test_liblex.cpp  test_liblex.hpp  trivia.test.cpp
src/liblower/: CMakeLists.txt
src/liblower/liblower/: lir.hpp  lir_formatting.cpp  lower.cpp  lower.hpp
src/libparse/: CMakeLists.txt
src/libparse/libparse/: ast.cpp  ast.hpp  ast_formatting.cpp  cst.cpp  cst.hpp  internals.cpp  internals.hpp  parse.cpp  parse.hpp  parse_definition.cpp  parse_expression.cpp  parse_pattern.cpp  parse_type.cpp  parser_internals.cpp  parser_internals.hpp  test_interface.cpp  test_interface.hpp
src/libparse/tests/: CMakeLists.txt  definition.test.cpp  expression.test.cpp  libparse.test.cpp  pattern.test.cpp  type.test.cpp
src/libparse2/: CMakeLists.txt
src/libparse2/libparse2/: cst.cpp  cst.hpp  parse.cpp  parse.hpp  parse_definition.cpp  parse_expression.cpp  parse_pattern.cpp  parse_type.cpp  parser_internals.cpp  parser_internals.hpp  test_interface.cpp  test_interface.hpp
src/libparse2/tests/: definition.test.cpp  expression.test.cpp  pattern.test.cpp  type.test.cpp
src/libquery/: CMakeLists.txt
src/libquery/libquery/: query.cpp  query.hpp
src/libreify/: CMakeLists.txt
src/libreify/libreify/: cir.hpp  cir_formatting.cpp  expression_reification.cpp  format_cir.cpp  pattern_reification.cpp  reification_internals.cpp  reification_internals.hpp  reify.cpp  reify.hpp  type_reification.cpp
src/libresolve/: CMakeLists.txt
src/libresolve/libresolve/: collect.cpp  collection.cpp  constraint.cpp  context.cpp  context.hpp  definition_resolution.cpp  environment.cpp  expression_resolution.cpp  format_hir.cpp  format_mir.cpp  fwd.hpp  generalization.cpp  hir.cpp  hir.hpp  hir_formatters.hpp  lookup.cpp  method.cpp  mir.cpp  mir.hpp  mir_formatting.cpp  module.cpp  module.hpp  namespace_lookup.cpp  occurs_check.cpp  pattern_resolution.cpp  resolution_internals.cpp  resolution_internals.hpp  resolve.cpp  resolve.hpp  resolve_definition.cpp  resolve_expression.cpp  resolve_module.cpp  resolve_mutability.cpp  resolve_path.cpp  resolve_pattern.cpp  resolve_template.cpp  resolve_type.cpp  scope.cpp  template_instantiation.cpp  type.hpp  (+3 more)
src/libresolve/tests/: CMakeLists.txt  libresolve.test.cpp  module.test.cpp  modulemap.test.cpp  project.test.cpp  resolution_test.cpp  resolution_test.hpp  resolve_module.test.cpp  resolve_project.test.cpp
src/libutl/: CMakeLists.txt
src/libutl-common/: CMakeLists.txt
src/libutl-diag/: CMakeLists.txt
src/libutl-diagnostics/: CMakeLists.txt
src/libutl-readline/: CMakeLists.txt
src/libutl/libutl/: flatmap.hpp  (+15 more)
src/libvm/: CMakeLists.txt
tests/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  resolution_test.cpp  utl_test.cpp  vm_test.cpp
tests/language-server/: CMakeLists.txt  lsp.test.cpp  rpc.test.cpp
tests/libcompiler/: CMakeLists.txt  document.test.cpp
tests/libdesugar/: CMakeLists.txt  desugar.test.cpp
tests/liblex/: CMakeLists.txt  floating_literal.test.cpp  identifier.test.cpp  integer_literal.test.cpp  numeric.test.cpp  punctuation.test.cpp  quoted_literal.test.cpp  test.cpp  test_liblex.cpp  test_liblex.hpp  tokens.test.cpp  trivia.test.cpp
tests/libparse/: CMakeLists.txt  expression.test.cpp  pattern.test.cpp  test_interface.cpp  test_interface.hpp  type.test.cpp
tests/libutl/: CMakeLists.txt  disjoint_set.test.cpp  index_vector.test.cpp  mailbox.test.cpp  utilities.test.cpp
tests/libutl-common/: test.cpp
(+321 files in other folders)
